--- a/Ali/app/src/main/res/layout/activity_main.xml
+++ b/Ali/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,11 @@
         android:id="@+id/textInputLayoutUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Usuário">
+        android:hint="Usuário"
+        app:boxCornerRadiusBottomEnd="15dp"
+        app:boxCornerRadiusBottomStart="15dp"
+        app:boxCornerRadiusTopEnd="15dp"
+        app:boxCornerRadiusTopStart="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextUsername"
@@ -24,7 +28,11 @@
         android:id="@+id/textInputLayoutPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Senha">
+        android:hint="Senha"
+        app:boxCornerRadiusBottomEnd="15dp"
+        app:boxCornerRadiusBottomStart="15dp"
+        app:boxCornerRadiusTopEnd="15dp"
+        app:boxCornerRadiusTopStart="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextPassword"
@@ -39,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Entrar"
-        app:cornerRadius="4dp"
+        android:background="@drawable/button_submit"
         android:layout_marginTop="16dp"/>
 
     <com.google.android.material.button.MaterialButton
@@ -47,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Registrar"
-        app:cornerRadius="4dp"
+        android:background="@drawable/button_submit"
         android:layout_marginTop="8dp"/>
 
 </LinearLayout>
