--- a/Ali/app/src/main/res/layout/activity_dashboard.xml
+++ b/Ali/app/src/main/res/layout/activity_dashboard.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -75,15 +75,25 @@
                     android:textColor="@android:color/darker_gray"
                     android:layout_marginStart="8dp"/>
 
+
             </LinearLayout>
         </LinearLayout>
 
+        <!-- Contador regressivo -->
+        <TextView
+            android:id="@+id/countdownTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center"
+            android:text="Tempo restante: 30 segundos"
+            android:textColor="@android:color/black"
+            android:textSize="50sp"
+            android:visibility="gone"
+            />
+
     </LinearLayout>
 
-
 </ScrollView>
-
-
-
-
-
