--- a/Ali/app/src/main/res/layout/activity_dashboard.xml
+++ b/Ali/app/src/main/res/layout/activity_dashboard.xml
@@ -88,7 +88,7 @@
             android:layout_marginTop="80dp"
             android:layout_marginEnd="16dp"
             android:gravity="center"
-            android:text="Tempo restante: 30 segundos"
+            android:text=""
             android:textColor="@android:color/black"
             android:textSize="50sp"
             android:visibility="gone"
