mudança no xml da admin, registro corredo no handler
tabela para textview, verificação para devolução sem conflitar uid

--- a/Ali/app/src/main/res/layout/activity_admin.xml
+++ b/Ali/app/src/main/res/layout/activity_admin.xml
@@ -18,13 +18,12 @@
             android:textStyle="bold"
             android:gravity="center_horizontal" />
 
-        <!-- Tabela de dados -->
-        <TableLayout
-            android:id="@+id/table_layout"
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-        </TableLayout>
+            android:layout_marginTop="16dp" />
 
     </LinearLayout>
 </ScrollView>
