--- a/Ali/app/src/main/res/layout/activity_registro.xml
+++ b/Ali/app/src/main/res/layout/activity_registro.xml
@@ -66,6 +66,8 @@
         android:layout_height="wrap_content"
         android:text="Registrar"
         android:background="@drawable/button_submit"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        app:backgroundTint="@color/button_background_color"
+        />
 
 </LinearLayout>
