--- a/Ali/app/src/main/res/values/colors.xml
+++ b/Ali/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="button_background_color">#0116A5</color>
+    <color name="status_bar_color">#0116A5</color>
+
 </resources>
