--- a/Ali/app/src/main/res/values/styles.xml
+++ b/Ali/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Define a cor da barra de status -->
-        <item name="android:statusBarColor">@color/status_bar_color</item>
+    <style name="AliTheme" parent="Theme.MaterialComponents.Light">
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowNoTitle">true</item>
+
     </style>
 </resources>
