--- a/Ali/app/src/main/res/layout/activity_admin.xml
+++ b/Ali/app/src/main/res/layout/activity_admin.xml
@@ -1,8 +1,8 @@
 <!-- activity_admin_layout.xml -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,5 +25,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp" />
 
+        <com.google.android.material.button.MaterialButton
+            android:text="Voltar"
+            android:id="@+id/buttonBack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="400dp"
+            android:background="@drawable/button_back"
+            app:backgroundTint="@color/button_back_background_color"
+            />
+
+
     </LinearLayout>
+
 </ScrollView>
