--- a/Ali/app/src/main/res/layout/activity_dashboard.xml
+++ b/Ali/app/src/main/res/layout/activity_dashboard.xml
@@ -83,8 +83,6 @@
                     android:text="Indisponível"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="16sp" />
-
-
             </LinearLayout>
         </LinearLayout>
 
@@ -102,6 +100,17 @@
             android:textSize="50sp"
             android:visibility="gone" />
 
+        <com.google.android.material.button.MaterialButton
+            android:text="Voltar"
+            android:id="@+id/buttonBack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/button_back"
+            app:backgroundTint="@color/button_back_background_color" />
+
     </LinearLayout>
+
+
 
 </ScrollView>
